Nested loop is done.