@@ -16,7 +16,7 @@ public class JsonOperations {
     public static JsonObject explainResultsJson(String sql, Object... binds) {
         List<PGobject> pGobjectList = selectColumn("explain (analyze, verbose, buffers, costs off, format json) " + sql, binds);
         Gson gson = new Gson();
-        JsonArray jsonArray = gson.fromJson(pGobjectList.get(0).getValue(), JsonArray.class);
+        JsonArray jsonArray = gson.fromJson(pGobjectList.getFirst().getValue(), JsonArray.class);
         return jsonArray.get(0).getAsJsonObject();
     }
 
